# agent-bot-for-telegram

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  COMMANDS.md  CONFIG.md  Dockerfile  INSTALLATION.md  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt
.agents/skills/abt-messages/: SKILL.md
.agents/skills/abt-messages/scripts/: messages.py
.agents/skills/git-commit-abt/: conventional-commits.md
.claude/skills/git-commit-abt/: SKILL.md
.codex/skills/git-commit-changes/: SKILL.md
.codex/skills/git-commit-changes/agents/: openai.yaml
.docker/: graphiti-config.yaml
.docker/abt/: Dockerfile
docs/: ARCHITECTURE.md  DOCKER.md  README.md  rich-messages.md  tasks.md
src/: __init__.py  bot.py
src/config/: __init__.py  config.docker.example.yaml  config.example.yaml  system_prompt.md
src/handlers/: __init__.py  basic.py  context.py  custom.py  plan.py  questionnaire.py  selectors.py  sessions.py  tasks.py  text.py  uploads.py  voice.py
src/i18n/: __init__.py  ar.json  bn.json  de.json  en.json  es.json  fr.json  hi.json  id.json  ja.json  ko.json  mr.json  pt.json  ru.json  sw.json  ta.json  te.json  tr.json  ur.json  vi.json  zh.json
src/infra/: __init__.py  access_control.py  agent.py  agent_base.py  agent_factory.py  agent_types.py  claude_agent.py  codex_agent.py  commands.py  graphiti_tool.py  healthcheck.py  logs.py  message_db.py  pi_agent.py  session_store.py  skills_linker.py  streaming.py  task_logging.py  task_runner.py  task_scheduler.py  task_store.py  task_tool.py  task_types.py
src/infra/interactions/: ask_user_question.py  gate.py  permission_prompt.py  plan_mode.py  push_notification.py
src/services/: __init__.py  system_prompt_builder.py  task_service.py  transcribe.py  upload_store.py
src/ui/: __init__.py  _inline_marks.py  _spoiler.py  agent_reply.py  album.py  file_delivery.py  markdown.py  middleware.py  plan_router.py  questionnaire.py  reactions.py  sdk_views.py  tool_status.py
tests/: conftest.py  test_agent_backends.py  test_ask_user_question_ui.py  test_bot_factories.py  test_commands.py  test_config.py  test_file_delivery.py  test_graphiti_tool.py  test_healthcheck.py  test_i18n.py  test_logs.py  test_markdown.py  test_message_db.py  test_plan_router.py  test_questionnaire.py  test_reactions.py  test_sdk_views.py  test_session_store.py  test_streaming.py  test_task_runner.py  test_task_scheduler.py  test_task_service.py  test_task_store.py  test_task_tool.py  test_task_types.py  test_tool_status.py  test_uploads.py
