[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "abt"
version = "0.1.0"
description = "Multi-bot Telegram agent gateway for Claude, Codex, and PI.dev backends"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk>=0.1.0,<0.2",
    # In-process SDK MCP tools need mcp 1.x; the 2.0 alpha drops Server.list_tools.
    "mcp>=1.19,<2",
    # Used directly by the Graphiti memory proxy to set a Host override header;
    # also an mcp transitive dep.
    "httpx>=0.27,<1",
    "openai-codex>=0.1.0b3,<0.2",
    "aiogram>=3.29,<4",
    "aiohttp>=3.9,<4",
    "markdown-it-py>=3.0,<5",
    "mdit-py-plugins>=0.4,<1",
    "pydantic>=2.0,<3",
    "PyYAML>=6.0,<7",
    "croniter>=2.0,<7",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "mypy>=1.10",
    "pip-audit>=2.7",
    "bandit>=1.7",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
abt = "src.bot:_cli"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle / pyflakes
    "I",             # isort
    "B",             # bugbear
    "UP",            # pyupgrade
    "ASYNC",         # async pitfalls
    "S",             # bandit-lite
    "RUF",           # ruff-specific
    "SIM",           # simplify
    "PTH",           # use pathlib
    "ANN",           # annotation completeness
    "RET",           # explicit returns
    "ARG",           # unused arguments
    "TC",            # typing import hygiene
    "D",             # pydocstyle — full docstring coverage
]
ignore = [
    "S101",    # assert is fine for internal invariants
    "S110",    # try/except/pass is intentional in many Telegram paths
    "E501",    # line length handled by formatter
    "ANN401",  # Any at SDK / JSON boundaries is intentional
    "TC006",   # cast() quoted-string style is optional
    "RET504",  # explicit assign-then-return is sometimes clearer
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.per-file-ignores]
"src/i18n/*.json" = ["ALL"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false  # SDK hook callbacks are intentionally untyped
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
